app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #fdf2f8; /* pink-50 */
  --foreground: #171717; /* neutral-900 */
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #171717;
    --foreground: #fdf2f8;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  overflow-x: hidden;
}

